@@ -44,16 +44,16 @@ Although some data has been published, the low quality of the data means that we
 Some data quality issues - Click for more info
 
 #alert_nodata5_text
-There are currently no active projects in {donor}'s IATI data
+There are currently no activeactivities in {donor}'s IATI data
 
 #alert_nodata5_tip_text
-No active projects found
+No activeactivities found
 
 #active_icon_alt_text
-Active projects icon
+Activeactivities icon
 
 #ended_icon_alt_text
-Ended projects icon
+Endedactivities icon
 
 #activity_icon_alt_text
 Activity icon
@@ -134,19 +134,19 @@ Sector Activities
 Activity
 
 #crumbname_active_text
-Active Projects
+Active Activities
 
 #crumbname_ended_text
-Ended Projects
+Ended Activities
 
 #crumbname_planned_text
-Planned Projects
+Planned Activities
 
 #crumbname_list_publishers_text
 Publishers
 
 #crumbname_missing_text
-Other Projects
+Other Activities
 
 #crumbname_data_quality_text
 About data quality
@@ -191,58 +191,58 @@ View all
 Current figures
 
 #stats_active_text
-Active Projects
+Active Activities
 
 #stats_ended_text
-Ended Projects
+Ended Activities
 
 #stats_total_text
-Total Projects
+Total Activities
 
 #stats_planned_text
-Planned Projects
+Planned Activities
 
 #stats_publisher_text
 IATI Publishers
 
 #stats_missing_text
-Other Projects:
+Other Activities:
 
 #stats_active_table_text
-Active<br/>Projects
+Active<br/>Activities
 
 #stats_ended_table_text
-Ended<br/>Projects
+Ended<br/>Activities
 
 #stats_total_table_text
-Total<br/>Projects
+Total<br/>Activities
 
 #stats_planned_table_text
-Planned<br/>Projects
+Planned<br/>Activities
 
 #stats_publisher_table_text
 IATI<br/>Publishers
 
 #stats_missing_table_text
-Other<br/>Projects
+Other<br/>Activities
 
 #stats_active_tip_text
-Total number of projects that are still active now
+Total number of activities that are still active now
 
 #stats_ended_tip_text
-Total number of projects that have ended
+Total number of activities that have ended
 
 #stats_total_tip_text
-Total number of projects
+Total number of activities
 
 #stats_planned_tip_text
-Total number of projects being planned in the future
+Total number of activities being planned in the future
 
 #stats_publisher_tip_text
 Total number of organisations that are reporting this data
 
 #stats_missing_tip_text
-Total number of projects that are missing dates
+Total number of activities that are missing dates
 
 #main_mention_pub_text
 View this Publisher as a Participating Org
@@ -254,13 +254,13 @@ View this Participating Org as a Publisher
 Data from IATI Registry on {today}
 
 #list_active_text
-Projects ending soon
+Activities ending soon
 
 #list_active_declare_text
 Recent first
 
 #list_ended_text
-Ended projects
+Ended activities
 
 #list_ended_declare_text
 Recent first
@@ -281,19 +281,19 @@ Back to Country table
 Total spend in {year}
 
 #view_donor_activities_text
-Projects and current spend ({USD})
+Activities and current spend ({USD})
 
 #view_sector_transactions_text
 Total spend in {year}
 
 #view_sector_activities_text
-Projects and current spend ({USD})
+Activities and current spend ({USD})
 
 #reported_by_text
 Reported by {reporting}
 
 #project_title_tip_text
-Project title
+Activity title
 
 #date_start_tip_text
 Start date
@@ -425,10 +425,10 @@ End Date
 Start Date
 
 #list_publishers_text
-Click to explore all projects reported by this publisher
+Click to explore all activities reported by this publisher
 
 #count_publishers_tip_text
-Number of projects reported
+Number of activities reported
 
 #iati_logo_alt_text
 IATI logo
@@ -610,13 +610,13 @@ Agencies are grouped for <a href="https://docs.google.com/spreadsheets/d/1jpXHDN
 IATI SPEND
 
 #donors_data_info3_text
-Three columns containing total disbursements and expenditure reported to IATI for the current and previous two years. The middle column will always be the same year as the most recent CRS data, enabling comparisons between the two. Clicking on any cell will take you to a list of projects that make up the value in the cell (listed in order of their contribution to that value). Cells containing "-" indicate that the organisation has not yet published to IATI. Cells containing "0" are an indication of issues with quality of data reported to IATI.
+Three columns containing total disbursements and expenditure reported to IATI for the current and previous two years. The middle column will always be the same year as the most recent CRS data, enabling comparisons between the two. Clicking on any cell will take you to a list of activities that make up the value in the cell (listed in order of their contribution to that value). Cells containing "-" indicate that the organisation has not yet published to IATI. Cells containing "0" are an indication of issues with quality of data reported to IATI.
 
 #donors_data_title4_text
 IATI BUDGET
 
 #donors_data_info4_text
-Total activity-level budgets for this and next year reported to IATI. Clicking on any cell will take you to a list of projects that make up the value in the cell (listed in order of their contribution to that value). Cells containing "-" indicate that the organisation has not yet published to IATI. Cells containing "0" are an indication of issues with quality of data reported to IATI.
+Total activity-level budgets for this and next year reported to IATI. Clicking on any cell will take you to a list of activities that make up the value in the cell (listed in order of their contribution to that value). Cells containing "-" indicate that the organisation has not yet published to IATI. Cells containing "0" are an indication of issues with quality of data reported to IATI.
 
 #donor_activities_data_description_title_text
 How is the data calculated?
@@ -664,7 +664,7 @@ Three columns containing total disbursements and expenditure reported to IATI fo
 IATI BUDGET
 
 #sectors_data_info4_text
-Total activity-level budgets for this and next year reported to IATI. Clicking on any cell will take you to a list of projects that make up the value in the cell (listed in order of their contribution to that value). 
+Total activity-level budgets for this and next year reported to IATI. Clicking on any cell will take you to a list of activities that make up the value in the cell (listed in order of their contribution to that value). 
 
 #sector_activities_data_description_title_text
 How is the data calculated?
@@ -748,19 +748,19 @@ We currently convert to USD using the exchange rate of the date specified in the
 Please refer to the FAQ for more information about <a href="{origin}/faq.html#tech5" target="_blank">currencies</a> and <a href="{origin}/faq.html#tech13" target="_blank">exchange rates</a>.
 
 #main_data_paragraph12_text
-Project list
+Activity list
 
 #main_data_paragraph13_text
 This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #view_active_text
-List of all active projects
+List of all active activities
 
 #view_ended_text
-List of all ended projects
+List of all ended activities
 
 #view_planned_text
-List of all planned projects
+List of all planned activities
 
 #view_list_publishers_text
 List of all publishers
@@ -775,25 +775,25 @@ Total spend
 Total budget
 
 #view_missing_text
-Projects with invalid date ranges
+Activities with invalid date ranges
 
 #active_data_description_title_text
 How is the data calculated?
 
 #active_data_description_text
-For each project, there is a start and end date. An active project is one that has started and not ended yet by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
+For each activity, there is a start and end date. An active activity is one that has started and not ended yet by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #ended_data_description_title_text
 How is the data calculated?
 
 #ended_data_description_text
-For each project, there is a start and end date.<br/>An ended project is one that has ended by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
+For each activity, there is a start and end date.<br/>An ended activity is one that has ended by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #planned_data_description_title_text
 How is the data calculated?
 
 #planned_data_description_text
-For each project, there is a start and end date. A planned project is one that has not started yet by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
+For each activity, there is a start and end date. A planned activity is one that has not started yet by {today}.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far, sorted by the most recent at the top. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #list_activities_data_description_title_text
 How is the data calculated?
@@ -811,7 +811,7 @@ This is a list of all publishers found within this dataset.
 How is the data calculated?
 
 #missing_data_description_text
-For each project, there is a start and end date. An 'Other' project is one with invalid dates; ie, missing either a start date or both start and end dates.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
+For each activity, there is a start and end date. An 'Other' activity is one with invalid dates; ie, missing either a start date or both start and end dates.<br/><br/>This list shows you total commitments for each activity and the percentage spent so far. Full black bars may signify data quality issues where published data is missing commitment and/or transaction information.
 
 #map_data_description_title_text
 How is the data calculated?
@@ -916,7 +916,7 @@ Three columns contain total disbursements and expenditure reported to IATI for t
 IATI BUDGET (allocated)
 
 #countries_data_info3_text
-Total activity-level budgets for this year reported to IATI in {publisher_name}’s activity files. Clicking on any cell will take you to those projects that make up the value in the cell (listed in order of their contribution to that value). Please note you can click through future years using the arrows.
+Total activity-level budgets for this year reported to IATI in {publisher_name}’s activity files. Clicking on any cell will take you to those activities that make up the value in the cell (listed in order of their contribution to that value). Please note you can click through future years using the arrows.
 
 #countries_data_title4_text
 IATI BUDGET (total)
@@ -946,7 +946,7 @@ Three columns contain total disbursements and expenditure reported to IATI for t
 IATI BUDGET (allocated)
 
 #publisher_countries_data_info3_text
-Total activity-level budgets for this year reported to IATI in {publisher_name}’s activity files. Clicking on any cell will take you to those projects that make up the value in the cell (listed in order of their contribution to that value). Please note you can click through future years using the arrows.
+Total activity-level budgets for this year reported to IATI in {publisher_name}’s activity files. Clicking on any cell will take you to those activities that make up the value in the cell (listed in order of their contribution to that value). Please note you can click through future years using the arrows.
 
 #publisher_countries_data_title4_text
 IATI BUDGET (total)
@@ -979,7 +979,7 @@ Three columns containing total disbursements and expenditure reported to IATI fo
 IATI BUDGET
 
 #publishers_data_info3_text
-Total activity-level budgets for this and next year reported to IATI. Clicking on any cell will take you to a list of projects that make up the value in the cell (listed in order of their contribution to that value). 
+Total activity-level budgets for this and next year reported to IATI. Clicking on any cell will take you to a list of activities that make up the value in the cell (listed in order of their contribution to that value). 
 
 #title_publisher_text
 The money comes from {table_publishers_count} IATI publishers.
