@@ -60,23 +60,23 @@
 	</tr>
 	<tr>
 		<td>country_percent</td>
-		<td>Approximate percentage of this project going to this country.</td>
+		<td>Approximate percentage of this activity going to this country.</td>
 	</tr>
 	<tr>
 		<td>day_end</td>
-		<td><a href="https://iatistandard.org/en/iati-standard/203/codelists/activitydatetype/">Planned or Actual end date</a> of the project where Actual takes priority.</td>
+		<td><a href="https://iatistandard.org/en/iati-standard/203/codelists/activitydatetype/">Planned or Actual end date</a> of the activity where Actual takes priority.</td>
 	</tr>
 	<tr>
 		<td>day_length</td>
-		<td>The length of the projects (End date minus Start date).</td>
+		<td>The length of the activities (End date minus Start date).</td>
 	</tr>
 	<tr>
 		<td>day_start</td>
-		<td><a href="https://iatistandard.org/en/iati-standard/203/codelists/activitydatetype/">Planned or Actual start date</a> of the project where Actual takes priority.</td>
+		<td><a href="https://iatistandard.org/en/iati-standard/203/codelists/activitydatetype/">Planned or Actual start date</a> of the activity where Actual takes priority.</td>
 	</tr>
 	<tr>
 		<td>description</td>
-		<td><a href="https://iatistandard.org/en/iati-standard/203/activity-standard/iati-activities/iati-activity/description/">Description</a> of the project.</td>
+		<td><a href="https://iatistandard.org/en/iati-standard/203/activity-standard/iati-activities/iati-activity/description/">Description</a> of the activity.</td>
 	</tr>
 	<tr>
 		<td>flags</td>
@@ -136,7 +136,7 @@
 	</tr>
 	<tr>
 		<td>sector_percent</td>
-		<td>Approximate percentage of this project going to this sector.</td>
+		<td>Approximate percentage of this activity going to this sector.</td>
 	</tr>
 	<tr>
 		<td>slug</td>
@@ -160,11 +160,11 @@
 	</tr>
 	<tr>
 		<td>status_code</td>
-		<td>The current status of the project.</td>
+		<td>The current status of the activity.</td>
 	</tr>
 	<tr>
 		<td>title</td>
-		<td>Title of the project.</td>
+		<td>Title of the activity.</td>
 	</tr>
 </table>
 
