@@ -1,3 +1,8 @@
+Development Portal (2024-03-04 shi)
+==============================
+Update all 'project/s' to 'activity/ies'
+
+
 Development Portal (2024-03-07 shi)
 ==============================
 Add mention links for publisher and participating-org #661
